--- a/index.html
+++ b/index.html
@@ -110,14 +110,11 @@
                 <p class="lead mb-5"> Sou Analista de Sistemas e Desenvolvedor orientado a solução, apaixonado por tecnologia e por ensinar. Profissional ágil, com experiência em resolução de problemas de forma rápida e facilidade em trabalhar em equipes. Estou trabalhando com tecnologias recentes, com foco principal no desenvolvimento back-end e sustentação de projetos de software utilizando a plataforma Microsoft.
 Sou Mestre em Engenharia de Produção, pós-graduado em Sistemas de Informação e graduado em Administração de Empresas.</p>
                 <div class="social-icons">
-                    <a href="https://www.linkedin.com/in/lopesdiego12/">
+                    <a href="https://www.linkedin.com/in/luiz-forcan/">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a href="https://github.com/lopesdiego12">
+                    <a href="https://github.com/luforcanpro">
                         <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://medium.com/@lopesdiego12">
-                        <i class="fab fa-medium"></i>
                     </a>
                 </div>
             </div>
