--- a/index.html
+++ b/index.html
@@ -512,13 +512,13 @@ Sou Mestre em Engenharia de Produção, pós-graduado em Sistemas de Informaçã
                 <li>  
                  <li>
                     <i class="fa fa-podcast" aria-hidden="true"></i>
-                    <a href="https://github.com/luforcanpro/FrontEndEcommerceComAngular" class="btn btn-link">Criação do front-end de um e-commerce com Angular</a>
+                    <a href="https://github.com/luforcanpro/FrontEndEcommerceComAngular" class="btn btn-link">Criação do Front-end de um E-commerce com Angular</a>
                 <li>
               
 			   <li>
                     <i class="fa fa-book" aria-hidden="true"></i>
                     <a href="https://github.com/luforcanpro/ApiCSharpProdutosEcommerceLivros"
-                        class="btn btn-link">Projeto Back-end de um e-commerce de livros utilizando Angular</a>
+                        class="btn btn-link">Projeto Back-end de um E-commerce de Livros, Utilizando Angular como Front-End</a>
                 <li>
                 <li>
                     <i class="fa fa-book" aria-hidden="true"></i>
