Atualizando novo projeto

--- a/index.html
+++ b/index.html
@@ -506,6 +506,10 @@ Sou Mestre em Engenharia de Produção, pós-graduado em Sistemas de Informaçã
         <div class="w-100">
             <h2 class="mb-5">Projetos / Project</h2>
             <ul class="fa-ul mb-0">
+			    <li>
+                    <i class="fab fa-youtube" aria-hidden="true"></i>
+                    <a href="https://github.com/luforcanpro/CQRSMediatRAspNetCore" class="btn btn-link">Implementando CQRS com MediatR no Asp Net Core</a>
+                <li>
                 <li>
                     <i class="fab fa-youtube" aria-hidden="true"></i>
                     <a href="https://github.com/luforcanpro/DeployAppAPINaAwsLambda" class="btn btn-link">Implementando uma aplicação web API na Aws Lambda</a>
